# school_manager

./: .gitignore  README.md
.github/workflows/: docker-publish.yml
admin/: .dockerignore  Dockerfile  README.md  components.d.ts  i18n.config.js  index.html  package-lock.json  package.json  tailwind.config.js  test.js  tsconfig.app.json  vite.config.ts
admin/env/: .env.development  .env.production
admin/scripts/: copy-dist.js
admin/src/: App.vue  env.d.ts  main.ts  vite-env.d.ts
pub/: .env.example  .gitignore  README.md  build_web.py  docker-compose.release.yml  docker-compose.yml  update_server.sh  update_web.sh
pub/web/: index.html
server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.release  README.md  entrypoint.sh
server/crates/data_model/: Cargo.toml
server/crates/data_model/src/: classes.rs  lib.rs  mod.rs  permissions.rs  prelude.rs  role_permissions.rs  roles.rs  schools.rs  teacher_classes.rs  user_roles.rs  users.rs
server/migrations/: 20251023081629_create_users_table.up.sql  20251023081629_init.up.sql  20251023084752_create_rbac_tables.up.sql  20251027000000_create_school_tables.down.sql  20251027000000_create_school_tables.up.sql  20251030000000_create_class_status_notify_trigger.up.sql
server/src/: lib.rs  main.rs
server/src/apis/: auth_middleware.rs  class_api.rs  list_api.rs  mod.rs  permission_api.rs  role_api.rs  school_api.rs  user_api.rs  wechat_api.rs  ws_api.rs
server/src/core/: app.rs  config.rs  constants.rs  db_listener.rs  error.rs  mod.rs  redis.rs  response.rs  router.rs
server/src/utils/: convert.rs  crud_macro.rs  jwt.rs  mod.rs
server/tests/: auth_api_test.rs  auth_test.rs  class_api_test.rs  helpers.rs  permission_api_test.rs  role_api_test.rs  school_api_test.rs  user_api_test.rs  user_test.rs  wechat_api_test.rs  ws_api_test.rs
weapp/: .gitignore  README.md  app.js  app.json  app.ts  app.wxss  package-lock.json  package.json  project.config.json  project.private.config.json  tsconfig.json
weapp/typings/: app.d.ts  const.ts
(+109 files in other folders)
