[package]
name = "data_model"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.13", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
# utoipa = { version = "5.0.0", features = ["chrono"] } 
# salvo-oapi = { version = "0.84", features = ["swagger-ui"] }